Use valueOf instead of new object.